--- a/main.css
+++ b/main.css
@@ -6,11 +6,15 @@ body {
     background: #ff1b68;
 }
 
-h1 {
+product-overview h1 {
     color: white;
     font-family:'Anton', sans-serif;
 }
 
 .section-title {
     color: #2ddf5c;
+}
+ 
+h1 {
+font-family: sans-serif;
 }
