--- a/main.css
+++ b/main.css
@@ -4,9 +4,14 @@ body {
 
 #product-overview {
     background: #ff1b68;
+    padding:20px;
+    border-style: solid;
+    border-color: black;
+    border-width: 5px;
+    margin: 20px;
 }
 
-product-overview h1 {
+#product-overview h1 {
     color: white;
     font-family:'Anton', sans-serif;
 }
