--- a/main.css
+++ b/main.css
@@ -1,14 +1,19 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family:'Montserrat', sans-serif;
+    margin: 0;
 }
 
 #product-overview {
     background: #ff1b68;
-    padding:20px;
-    border-style: solid;
-    border-color: black;
-    border-width: 5px;
-    margin: 20px;
+    width: 100%;
+    height: 528px;
+    padding: 10px;
+    border: 5px solid black;
+    margin: 10px;
 }
 
 #product-overview h1 {
@@ -20,6 +25,6 @@ body {
     color: #2ddf5c;
 }
  
-h1 {
+/* h1 {
 font-family: sans-serif;
-}
+} */
