--- a/main.css
+++ b/main.css
@@ -12,8 +12,6 @@ body {
     width: 100%;
     height: 528px;
     padding: 10px;
-    border: 5px solid black;
-    margin: 10px;
 }
 
 #product-overview h1 {
@@ -28,3 +26,9 @@ body {
 /* h1 {
 font-family: sans-serif;
 } */
+
+.main-header {
+    width: 100%;
+    background: #2ddf5c;
+    padding: 8px 16px;
+}
