--- a/main.css
+++ b/main.css
@@ -33,6 +33,22 @@ font-family: sans-serif;
     padding: 8px 16px;
 }
 
+.main-header > div {
+    display: inline-block;
+}
+
+.main-nav {
+    display: inline-block;
+    text-align: right;
+    width: calc(100% - 49px);
+}
+
+.main-nav__items {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
 .main-nav__item {
     display: inline-block;
 }
