styling anchor tags

--- a/main.css
+++ b/main.css
@@ -60,4 +60,10 @@ font-family: sans-serif;
 
 .main-nav__item {
     display: inline-block;
+    margin: 0 16px;
+}
+
+.main-nav__item a {
+    text-decoration: none;
+    color: #0e4f1f;
 }
