--- a/main.css
+++ b/main.css
@@ -67,3 +67,11 @@ font-family: sans-serif;
     text-decoration: none;
     color: #0e4f1f;
 }
+
+.main-nav__item a:hover {
+    color: white;
+}
+
+.main-nav__item a:active {
+    color: white;
+}
