--- a/main.css
+++ b/main.css
@@ -68,10 +68,7 @@ font-family: sans-serif;
     color: #0e4f1f;
 }
 
-.main-nav__item a:hover {
-    color: white;
-}
-
+.main-nav__item a:hover,
 .main-nav__item a:active {
     color: white;
 }
