--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    font-family:'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
 }
 
@@ -11,20 +11,45 @@ body {
     background: url("freedom.jpg");
     width: 100%;
     height: 528px;
-    padding: 10px;
-}
-
-#product-overview h1 {
-    color: white;
-    font-family:'Anton', sans-serif;
+    padding: 10px;   
 }
 
 .section-title {
     color: #2ddf5c;
+    text-align: center;
 }
- 
+
+#product-overview h1 {
+    color: white;
+    font-family: 'Anton', sans-serif;
+}
+
+.plan {
+    background: #d5ffdc;
+    text-align: center;
+    padding: 16px;
+    margin: 8px;
+    display: inline-block;
+    width: 30%;
+    vertical-align: middle;
+}
+
+.plan--highlighted {
+    background: #19b84c;
+    color: white;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+.plan__annotation {
+    background: white;
+    color: #19b84c;
+    padding: 8px;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+}
+
 /* h1 {
-font-family: sans-serif;
+    font-family: sans-serif;
 } */
 
 .main-header {
@@ -80,7 +105,7 @@ font-family: sans-serif;
     color: white;
     background: #ff1b68;
     padding: 8px 16px;
-    border-radius: 8px; 
+    border-radius: 8px;
 }
 
 .main-nav__item--cta a:hover,
